--- a/src/package.json
+++ b/src/package.json
@@ -3,5 +3,8 @@
     "version": "1.0.0",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "devDependencies": {
+        "truffle": "^5.4.11"
     }
 }
