--- a/src/package.json
+++ b/src/package.json
@@ -5,6 +5,7 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "devDependencies": {
+        "@openzeppelin/contracts": "^4.3.2",
         "truffle": "^5.4.11"
     }
 }
