--- a/src/package.json
+++ b/src/package.json
@@ -2,7 +2,8 @@
     "name": "src",
     "version": "1.0.0",
     "scripts": {
-        "fork": "ganache-cli --fork https://mainnet.infura.io/v3/${INFURA} --networkId 999"
+        "fork": "ganache-cli --fork https://mainnet.infura.io/v3/${INFURA} --unlock ${MAINNET_ACCOUNT} --networkId 999",
+        "test": "npx truffle test --network mainnet_fork"
     },
     "devDependencies": {
         "@openzeppelin/contracts": "^4.3.2",
