--- a/src/package.json
+++ b/src/package.json
@@ -2,6 +2,7 @@
     "name": "src",
     "version": "1.0.0",
     "scripts": {
+        "loadenv": "export $(cat .env)",
         "fork": "ganache-cli --fork https://mainnet.infura.io/v3/${INFURA} --unlock ${STABLECOIN_WHALE},${TOKEN_WHALE} --networkId 999",
         "test": "npx truffle test --network mainnet_fork"
     },
