--- a/src/package.json
+++ b/src/package.json
@@ -3,7 +3,8 @@
     "version": "1.0.0",
     "scripts": {
         "fork": "npx ganache-cli --fork https://mainnet.infura.io/v3/$INFURA --unlock $STABLECOIN_WHALE --unlock $TOKEN_WHALE --networkId 999",
-        "test": "npx truffle test --network mainnet_fork --show-events"
+        "test": "npx truffle test --network mainnet_fork",
+        "test:event": "npx truffle test --network mainnet_fork --show-events"
     },
     "devDependencies": {
         "@openzeppelin/contracts": "^4.3.2",
