--- a/src/package.json
+++ b/src/package.json
@@ -2,6 +2,7 @@
     "name": "src",
     "version": "1.0.0",
     "scripts": {
+        "compile": "npx truffle compile",
         "fork": "npx ganache-cli --fork https://mainnet.infura.io/v3/$INFURA --unlock $STABLECOIN_WHALE --unlock $TOKEN_WHALE --networkId 999",
         "test": "npx truffle test --network mainnet_fork",
         "test:event": "npx truffle test --network mainnet_fork --show-events"
