--- a/src/package.json
+++ b/src/package.json
@@ -9,6 +9,7 @@
     },
     "devDependencies": {
         "@openzeppelin/contracts": "^4.3.2",
+        "@openzeppelin/test-helpers": "^0.5.13",
         "dotenv": "^10.0.0",
         "ganache-cli": "^6.12.2",
         "truffle": "^5.4.11"
