--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -7,15 +7,18 @@
         "eject": "react-scripts eject"
     },
     "dependencies": {
+        "@web3-react/core": "^6.1.9",
+        "@web3-react/injected-connector": "^6.0.7",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-scripts": "4.0.3"
+        "react-scripts": "4.0.3",
+        "web3": "^1.5.3"
     },
     "devDependencies": {
-        "typescript": "^4.1.2",
         "@types/node": "^12.0.0",
         "@types/react": "^17.0.0",
-        "@types/react-dom": "^17.0.0"
+        "@types/react-dom": "^17.0.0",
+        "typescript": "^4.1.2"
     },
     "eslintConfig": {
         "extends": [
