--- a/src/dapp/package.json
+++ b/src/dapp/package.json
@@ -10,6 +10,7 @@
     "devDependencies": {
         "@openzeppelin/contracts": "^4.3.2",
         "@openzeppelin/test-helpers": "^0.5.13",
+        "@truffle/hdwallet-provider": "^1.5.0",
         "dotenv": "^10.0.0",
         "ganache-cli": "^6.12.2",
         "truffle": "^5.4.11"
