--- a/src/dapp/package.json
+++ b/src/dapp/package.json
@@ -5,7 +5,8 @@
         "compile": "npx truffle compile",
         "fork": "npx ganache-cli --fork https://mainnet.infura.io/v3/$INFURA --unlock $STABLECOIN_WHALE --unlock $TOKEN_WHALE --networkId 999",
         "test": "npx truffle test --network mainnet_fork",
-        "test:event": "npx truffle test --network mainnet_fork --show-events"
+        "test:event": "npx truffle test --network mainnet_fork --show-events",
+        "deploy:ropsten": "npx truffle migrate --network ropsten"
     },
     "devDependencies": {
         "@openzeppelin/contracts": "^4.3.2",
