--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -2,11 +2,12 @@
     "name": "frontend",
     "version": "1.0.0",
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
+        "start": "craco start",
+        "build": "craco build",
         "eject": "react-scripts eject"
     },
     "dependencies": {
+        "@craco/craco": "^6.3.0",
         "@web3-react/core": "^6.1.9",
         "@web3-react/injected-connector": "^6.0.7",
         "react": "^17.0.2",
@@ -18,6 +19,9 @@
         "@types/node": "^12.0.0",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
+        "autoprefixer": "^9.8.6",
+        "postcss": "^7.0.36",
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.14",
         "typescript": "^4.1.2"
     },
     "eslintConfig": {
