--- a/src/dapp/package.json
+++ b/src/dapp/package.json
@@ -15,5 +15,8 @@
         "dotenv": "^10.0.0",
         "ganache-cli": "^6.12.2",
         "truffle": "^5.4.11"
+    },
+    "dependencies": {
+        "web3": "^1.5.2"
     }
 }
