--- a/src/dapp/package.json
+++ b/src/dapp/package.json
@@ -4,9 +4,10 @@
     "scripts": {
         "compile": "npx truffle compile && cp ./build/contracts/* ../frontend/src/abi",
         "fork": "npx ganache-cli --fork https://mainnet.infura.io/v3/$INFURA --unlock $STABLECOIN_WHALE --unlock $TOKEN_WHALE --networkId 999",
-        "test": "npx truffle test --network mainnet_fork",
-        "test:event": "npx truffle test --network mainnet_fork --show-events",
-        "deploy:ropsten": "npx truffle migrate --network ropsten --reset"
+        "test": "npx truffle test --network ganache",
+        "test:event": "npx truffle test --network ganache --show-events",
+        "deploy:ropsten": "npx truffle migrate --network ropsten --reset",
+        "deploy:ganache": "npx truffle migrate --network ganache --reset"
     },
     "devDependencies": {
         "@openzeppelin/contracts": "^4.3.2",
