--- a/src/dapp/package.json
+++ b/src/dapp/package.json
@@ -15,9 +15,7 @@
         "@truffle/hdwallet-provider": "^1.5.0",
         "dotenv": "^10.0.0",
         "ganache-cli": "^6.12.2",
-        "truffle": "^5.4.11"
-    },
-    "dependencies": {
+        "truffle": "^5.4.11",
         "web3": "^1.5.2"
     }
 }
