--- a/src/dapp/package.json
+++ b/src/dapp/package.json
@@ -2,7 +2,8 @@
     "name": "src",
     "version": "1.0.0",
     "scripts": {
-        "compile": "npx truffle compile && cp ./build/contracts/* ../frontend/src/abi",
+        "copy-abi": "cp ./build/contracts/* ../frontend/src/abi/",
+        "compile": "npx truffle compile && npm run copy-abi",
         "fork": "npx ganache-cli --fork https://mainnet.infura.io/v3/$INFURA --unlock $STABLECOIN_WHALE --unlock $TOKEN_WHALE --networkId 999",
         "test": "npx truffle test --network ganache",
         "test:event": "npx truffle test --network ganache --show-events",
