--- a/src/frontend/public/manifest.json
+++ b/src/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
     "short_name": "Crypto Options",
-    "name": "Crypto Options: Trading Platform",
+    "name": "Crypto Options: Options Trading Platform",
     "icons": [
         {
             "src": "favicon.ico",
